<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="@drawable/round_solid_white_8"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llAddressBook"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/delivery_address"
            android:textColor="#ff333333"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_booklet" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:drawablePadding="8dp"
            android:text="@string/address_book"
            android:textColor="#ff333333"
            android:textSize="12sp"
            app:drawableEndCompat="@drawable/ic_arrow" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="#E7E7E7" />

    <com.gxy.common.view.InputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:is_requireds="true"
        app:title="@string/local_area" />

    <com.gxy.common.view.InputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:is_input="true"
        app:is_requireds="true"
        app:title="@string/detailed_address" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:button="@drawable/selector_save_address_book"
        android:text="@string/save_address_book"
        android:textColor="#ff333333"
        android:textSize="12sp"
        android:textStyle="bold" />
</LinearLayout>