<?xml version="1.0" encoding="utf-8"?>
<com.gxy.common.view.ToolbarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:title_content="@string/goods_take_order">

    <com.donkingliang.consecutivescroller.ConsecutiveScrollerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#F2F5F9"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_solid_white_8"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="12dp"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/ivGoods"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvGoodsName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:maxLines="2"
                android:text="精品东北五常 臻品大米 皇家贡米之选 粒粒饱满 香飘万家 米香四溢 ..."
                android:textColor="#ff333333"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tvTopPoints"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ivGoods"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTopPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="2600"
                android:textColor="#fffa5151"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tvTopNum"
                app:layout_constraintStart_toStartOf="@+id/tvGoodsName"
                app:layout_constraintTop_toBottomOf="@+id/tvGoodsName" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="积分+"
                android:textColor="#fffa5151"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvTopPoints"
                app:layout_constraintStart_toEndOf="@+id/tvTopPoints"
                app:layout_constraintTop_toTopOf="@+id/tvTopPoints" />

            <TextView
                android:id="@+id/tvTopMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9.9"
                android:textColor="#fffa5151"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView14"
                app:layout_constraintStart_toEndOf="@+id/textView14"
                app:layout_constraintTop_toTopOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="元"
                android:textColor="#fffa5151"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvTopMoney"
                app:layout_constraintStart_toEndOf="@+id/tvTopMoney"
                app:layout_constraintTop_toTopOf="@+id/tvTopMoney" />

            <TextView
                android:id="@+id/tvTopNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:text="每人限购 5 件"
                android:textColor="#ff666666"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvTopPoints"
                app:layout_constraintTop_toBottomOf="@+id/tvTopPoints" />

            <ImageView
                android:id="@+id/ivReceiveType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_solid_white_8"
            android:orientation="vertical">

            <com.gxy.common.view.InputLayout
                android:id="@+id/inputSpecification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:is_need_show_bottom_dialog="false"
                app:is_requireds="true"
                app:title="@string/specification" />

            <com.gxy.common.view.InputLayout
                android:id="@+id/inputNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                app:is_input="true"
                app:is_requireds="true"
                app:title="@string/take_order_num" />

            <com.gxy.common.view.InputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:is_input="true"
                app:is_requireds="true"
                app:title="@string/contact_person" />

            <com.gxy.common.view.InputPhoneLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:input_phone_title="@string/contact_phone"
                app:required="true" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <ViewStub
            android:id="@+id/vsZt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout="@layout/layout_shop_receive_zt" />

        <ViewStub
            android:id="@+id/vsKd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout="@layout/layout_shop_receive_kd" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />
    </com.donkingliang.consecutivescroller.ConsecutiveScrollerLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTakeOrder"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/gpPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:constraint_referenced_ids="tvPoints,textView2,tvMoney,textView4" />

        <TextView
            android:id="@+id/tvTakeOrder"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_566bbeb_7788ef_40"
            android:gravity="center"
            android:text="@string/order_now"
            android:textColor="#ffffffff"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/total"
            android:textColor="#ff333333"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:text="2600"
            android:textColor="#fffa5151"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:text="积分+"
            android:textColor="#fffa5151"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvMoney"
            app:layout_constraintEnd_toStartOf="@+id/tvMoney"
            app:layout_constraintTop_toTopOf="@+id/tvMoney" />

        <TextView
            android:id="@+id/tvMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:text="9.9"
            android:textColor="#fffa5151"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvNum"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="元"
            android:textColor="#fffa5151"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvMoney"
            app:layout_constraintEnd_toStartOf="@+id/tvTakeOrder"
            app:layout_constraintTop_toTopOf="@+id/tvMoney" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_4"
            android:text="共"
            android:textColor="#ff333333"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvNum"
            app:layout_constraintEnd_toStartOf="@+id/tvNum"
            app:layout_constraintTop_toTopOf="@+id/tvNum" />

        <TextView
            android:id="@+id/tvNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_4"
            android:text="0"
            android:textColor="#ff333333"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/tvMoney" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="件商品"
            android:textColor="#ff333333"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvNum"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/tvNum" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.gxy.common.view.ToolbarLayout>